refactor: replace deprecated url constructor with uri.tourl()